--- a/eps_lar8/composer.json
+++ b/eps_lar8/composer.json
@@ -38,7 +38,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "classmap": [
+            "app/Libs"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
