--- a/eps_lar8/.htaccess
+++ b/eps_lar8/.htaccess
@@ -1,18 +1,28 @@
+<IfModule mod_headers.c>
+Header add Access-Control-Allow-Origin: "https://alphagc.proyek.web.id/"
+Header add Access-Control-Allow-Methods: "PUT, GET, POST, DELETE, OPTIONS"
+</IfModule>
+
+
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews
     </IfModule>
-    
+
     RewriteEngine On
-    
+
     RewriteCond %{REQUEST_FILENAME} -d [OR]
     RewriteCond %{REQUEST_FILENAME} -f
     RewriteRule ^ ^$1 [N]
-    
+
     RewriteCond %{REQUEST_URI} (\.\w+$) [NC]
     RewriteRule ^(.*)$ public/$1
-    
+
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ server.php
-    </IfModule>
+
+    # Handle Authorization Header
+    RewriteCond %{HTTP:Authorization} .
+    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+</IfModule>
