implemtasi payment BCA

--- a/eps_lar8/composer.json
+++ b/eps_lar8/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.3",
         "barryvdh/laravel-dompdf": "^2.2",
         "fideloper/proxy": "^4.2",
+        "firebase/php-jwt": "^6.10",
         "fruitcake/laravel-cors": "^3.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "jenssegers/agent": "^2.6",
